// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SentimentGauge Snapshot matches snapshot with empty state 1`] = `
<View>
  <Text>
    Sentiment Gauge
  </Text>
  <Text>
    No data available
  </Text>
</View>
`;

exports[`SentimentGauge Snapshot matches snapshot with valid sentiment 1`] = `
<View>
  <Text>
    Sentiment Gauge
  </Text>
  <Text>
    50% Positive
  </Text>
</View>
`;
